2009-09-29  Lluis Sanchez Gual  <lluis@novell.com>

	* wrapper\Paned.cs: Restore the paned position after
	  realizing. It may have been reset during the realization.
	  Fixes bug #542227.

2009-09-21  Lluis Sanchez Gual  <lluis@novell.com>

	* wrapper/Widget.cs: Fire name change event when name changes.
	  Fixes bug #540512 - NullReferenceException in stetic
	  generated code.

2009-09-10  Christian Hergert  <chris@dronelabs.com>

	* libstetic/libstetic.dll.config: Use quartz on osx.

2009-09-02  Lluis Sanchez Gual  <lluis@novell.com>

	* wrapper/Action.cs: For stock gtk and gnome icons, use the
	  stock id as base name for the action identifier. Fixes bug
	  #525571.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* libstetic.csproj: Updated dependencies. We now depend on
	  gtk# 2.12.8, Mono 2.4, and Mono.Addins 0.4.

2009-08-25  Lluis Sanchez Gual  <lluis@novell.com>

	* wrapper/Container.cs: Properly validate widget ids when
	  pasting a child. If there is a conflict, the child has to be
	  modified. Fixes bug #530086 - When copy/pasting widgets in
	  stetic, the original is renamed.

2009-08-04  Lluis Sanchez Gual  <lluis@novell.com>

	* wrapper/Notebook.cs: Fix issue with adding a widget with
	  ShowScrollbars=true to a notebook. Fixes bug 526434 -
	  Notebook Tab Labels Revert Back to "Page 1".

2009-08-04  Lluis Sanchez Gual  <lluis@novell.com>

	* wrapper/ComboBox.cs:
	* wrapper/ComboBoxEntry.cs: Changed the sensitivity mode to
	  'always on'. Since gtk+ 2.14, empty combos are disabled by
	  default.

2009-07-31  Lluis Sanchez Gual  <lluis@novell.com>

	* wrapper/objects.xml: Fix invalid xml.

2009-07-31  Lluis Sanchez Gual  <lluis@novell.com>

	* wrapper/objects.xml: Fix some default values.

2009-07-31  Lluis Sanchez Gual  <lluis@novell.com>

	* wrapper/objects.xml: Make sure the default value for
	  HasSeparator is true.

2009-07-21  Lluis Sanchez Gual  <lluis@novell.com>

	* wrapper/objects.xml: Removed Version=2.6.0.0 specification